2009-07-27  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=27735
        Give a helpful name to JSLock constructor argument

        * Api/qwebframe.cpp:
        (QWebFrame::addToJavaScriptWindowObject):

2009-07-27  Volker Hilsheimer <volker.hilsheimer@nokia.com>

        Reviewed by Simon Hausmann.

        QWebView's "enabled" parameter should default to true, as with QGraphicsView and
        QPainter.

        * Api/qwebview.cpp: Add reference to QPainter::renderHints().
        * Api/qwebview.h: Add default for enabled argument.

2009-07-26  Kavindra Palaraja  <kavindra.palaraja@nokia.com>

        Reviewed by Simon Hausmann.

        More documentation cleanups in the QWebElement class overview.

        * Api/qwebelement.cpp:

2009-07-26  Kavindra Palaraja  <kavindra.palaraja@nokia.com>

        Reviewed by Simon Hausmann.

        Clean up documentation of QWebElement's findFirst and findAll functions,
        as well as their QWebFrame counterparts.

        * Api/qwebelement.cpp:
        * Api/qwebframe.cpp:

2009-07-26  Kavindra Palaraja  <kavindra.palaraja@nokia.com>

        Reviewed by Simon Hausmann.

        Various documentation cleanups

        * Fixed qdoc warnings
        * Hide QWebNetworkInterface from the class overview
        * Mention QWebElement in the module overview
        * More cleanups

        * Api/qwebframe.cpp:
        * Api/qwebnetworkinterface.cpp:
        * Api/qwebview.cpp:
        * docs/qtwebkit.qdoc:

2009-07-26  Kavindra Palaraja  <kavindra.palaraja@nokia.com>

        Reviewed by Simon Hausmann.

        Added missing class diagram referenced from the docs, taken from the Qt
        documentation.

        * docs/qtwebkit.qdocconf: Register the image directory with
        qdoc.
        * docs/qwebview-diagram.png: Added.

2009-07-24  Antonio Gomes   <antonio.gomes@openbossa.org>

        Reviewed by Adam Treat.
