@@ -1,3 +1,12 @@
+2009-07-28  Simon Hausmann  <simon.hausmann@nokia.com>
+
+        Reviewed by Ariya Hidayat.
+
+        Make it possible to pass relative file names to QtLauncher.
+
+        * QtLauncher/main.cpp:
+        (MainWindow::MainWindow):
+
 2009-07-27  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin Adler.
